test/Fail/FunSort-SSet-X-SetOmega.err
FunSort-SSet-X-SetOmega.agda:6.13-18: error: [UnequalTypes]
The types
  Setω
and
  funSort SSet _4
are not equal
when checking that the expression A → B has type Setω
